handshake wip
